--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>w3newbie HTML Email</title>
+    <title>Zoom</title>
     <style type="text/css">
       @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap");
 
@@ -20,6 +20,14 @@
       }
       table {
         border-spacing: 20px;
+        border-spacing: 0;
+        padding: 20px;
+      }
+      td {
+        padding: 0;
+      }
+      img {
+        border: 0;
       }
 
       h2 {
@@ -69,9 +77,15 @@
         height: 80px;
         background-color: transparent;
       }
-      @media screen and (max-width: 600px) {
+      @media screen and (max-width: 740px) {
+        .container {
+          width: 50%;
+        }
       }
       @media screen and (max-width: 400px) {
+        .container {
+          width: 400px;
+        }
       }
     </style>
   </head>
@@ -92,7 +106,7 @@
                 height="50px"
               >
                 <table
-                  class="container"
+                  class="header-left"
                   width="50%"
                   cellspacing="0"
                   align="left"
@@ -153,12 +167,7 @@
             <!-- action row -->
             <tr>
               <td height="100%">
-                <table
-                  class="container"
-                  width="100%"
-                  cellspacing="0"
-                  align="left"
-                >
+                <table class="" width="100%" cellspacing="0" align="left">
                   <tr>
                     <td style="text-align: center">
                       <h2>
@@ -340,7 +349,11 @@
               <td
                 style="background-color: #d8dde4; color: #808080; height: 200px"
               >
-                <table style="text-align: center" align="center">
+                <table
+                  class="container"
+                  style="text-align: center"
+                  align="center"
+                >
                   <tr>
                     <td>
                       +1.888.799.9666<br />
